--- a/mumemit/index.html
+++ b/mumemit/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Museo de Mitos y Traumas</title>
+    <title>Museo Mexicano de Mitos Traumáticos</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -152,18 +152,39 @@
                 </p>
                 <p class="text-white bg-dark d-inline-block p-2"
                     style="max-width: 400px; position: absolute; top: 200px; left: 700px">
-                    Los tacos, mole, tamales, chocolate, chiles en nogada, etc... NO existían. Todo eso surgió por la <b>mezcla</b> de la cultura indigena y española.
+                    Los tacos, mole, tamales, chocolate, chiles en nogada, etc... NO existían. No son comida prehispánica! Todo eso surgió por la <b>mezcla</b> de la cultura indigena y española.
                 </p>
             </section>
             <section id="s-mito-conquista" class="secc-secreto d-none">
-                <h3>Los españoles no conquistaron a "México", no existían! No son comida prehispánica! Conquistaron Tenochtitlan con ayuda de los pueblos indígenas.</h3>
-
+                <p class="text-white bg-dark d-inline-block p-2"
+                    style="max-width: 400px; position: absolute; top: 100px; left: 350px">
+                    Los españoles no conquistaron a "México", no existía!  Conquistaron Tenochtitlan con ayuda de los pueblos indígenas
+                </p>            
+                <p class="text-white bg-dark d-inline-block p-2"
+                    style="max-width: 400px; position: absolute; bottom: 100px; left: 50px">
+                    Hernan Cortés no era un jorobado con poca educación que de alguna forma logro vencer guerreros de más de 1.80m como lo muestra Diego Rivera
+                </p>
+                <p class="text-white bg-dark d-inline-block p-2"
+                    style="max-width: 400px; position: absolute; bottom: 100px; right: 50px">
+                    Hernán Cortes era muy estudioso, aprendió a hablar fluidamente Nauhatl y lo promovía entre españoles. Tenía un proyecto de un nuevo mundo pero el rey, Carlos V, (el de los chocolates), no lo permitió
+                </p>
             </section>
             <section id="s-mito-malinche" class="secc-secreto d-none">
 
             </section>
             <section id="s-mito-grito" class="secc-secreto d-none">
-
+                <p class="text-white bg-dark d-inline-block p-2"
+                    style="max-width: 400px; position: absolute; top: 100px; left: 10px">
+                    Miguel Hidalgo no lucho en nombre de la libertad e Independencia de México, los gritos fueron: Viva Fernando VII. Es más, peleaba por sus haciendas las cuales tenía endeudadas.
+                </p>            
+                <p class="text-white bg-dark d-inline-block p-2"
+                    style="max-width: 400px; position: absolute; bottom: 100px; left: 50px">
+                    La guerra independencia fue entre españoles, criollos, mestizos e indigenas vs españoles, criollos, mestizos e indigenas
+                </p>
+                <p class="text-white bg-dark d-inline-block p-2"
+                    style="max-width: 400px; position: absolute; top: 100px; right: 150px">                    
+                    La guerra independencia no fue un acto coordinado. De hecho, se adelanto Miguel Hidalgo, y sufrieron varias perdidas por su terquedad. 
+                </p>
             </section>
             <section id="s-mito-heroes" class="secc-secreto d-none">
 
@@ -172,7 +193,18 @@
 
             </section>
             <section id="s-mito-revolucion" class="secc-secreto d-none">
-                <h3 class="display-3">TODO ES UNA MENTIRA!</h3>
+                <p class="text-white bg-dark d-inline-block p-2"
+                    style="max-width: 400px; position: absolute; top: 30px; left: 10px">
+                    La guerra no culminó con la "derrota" de Porfirio Días, eso fue tan solo el comienzo. Lo que sigue son 10 años de traición entre los triunfadores.
+                </p>            
+                <p class="text-white bg-dark d-inline-block p-2"
+                    style="max-width: 400px; position: absolute; bottom: 60px; left: 250px">
+                    La revolución fue en gran parte financiada y promovida por Estados Unidos, ya que los planes de Porfirio no se alineaban con los económicos de Estados Unidos.
+                </p>
+                <p class="text-white bg-dark d-inline-block p-2"
+                    style="max-width: 400px; position: absolute; top: 150px; right: 100px">                    
+                    La revolución es enseñada como la lucha de los campesinos, un pueblo unido, para retomar sus tierras y libertad. Y aún así, después, obtuvimos un siglo de dictadura bajo un partido político.
+                </p>
             </section>
             <section id="s-mito-republica" class="secc-secreto d-none">
                 <h3>Iturbide </h3>
@@ -357,7 +389,7 @@
             debugMode = true;
             loadCuadro(mitoId);
         }
-        // debugMito("mito-indigena");
+        // debugMito("mito-revolucion");
     </script>
 
 </body>
