--- a/mumemit/index.html
+++ b/mumemit/index.html
@@ -17,6 +17,7 @@
             position: relative;
             height: 600px;
             padding: 0;
+            touch-action: none;
         }
         #canvas-container main {
             position: absolute;
