--- a/AI/SVM/index.html
+++ b/AI/SVM/index.html
@@ -6,8 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SVMs</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.2.1/dist/chart.min.js"></script>
 </head>
 <body>
+    <div>
+        <div id="grapher-container" style="display: inline-block;">
+        </div>
+        <div id="error-container" style="display: inline-block;">
+            <div id="total-error-container">
+                <canvas id="total-loss-graph" width="800" height="200"></canvas>
+            </div>
+            <div id="hinge-error-container" style="display: inline-block;">
+                <canvas id="hinge-loss-graph" width="400" height="400"></canvas>
+            </div>
+            <div id="hinge-error-container" style="display: inline-block;">
+                <canvas id="margin-loss-graph" width="400" height="400"></canvas>
+            </div>
+        </div>
+    </div>
+    <h1>SVM Lab</h1>
+    <p>Press 'p' for adding positive labeled under your mouse position.</p>
+    <p>Press 'q' for adding negative labeled under your mouse position.</p>
+    <p>Press 'Enter' for starting a learning process or to pause an ongoing one.</p>
+    <p>Press 'Reset' for erasing all data and learning data</p>
+    <p>Press 'Set Best SVM' to carry on learning from the Best SVM</p>
+    <p>Press 'Reset Learning' to erase all learning data but NOT datapoints</p>
     <script src="svmFuncs.js"></script>
     <script src="svmSketch.js"></script>
 </body>
