--- a/AI/SVM/index.html
+++ b/AI/SVM/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SVMs</title>
+    <meta name="description" content="A SVM model visualization and training lab with controls">
+    <meta name="author" content="IOWizard">
+    <meta name="keywords" content="Machine Learning, SVM">
+    <meta property="og:title" content="SVM Lab" />
+    <meta property="og:description" content="A SVM model visualization and training lab with controls" />
+    <meta property="og:image" content="https://jjol.github.io/academic-work/AI/SVM/Logo.jpg" />
+    <title>SVM Lab</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.2.1/dist/chart.min.js"></script>
 </head>
